style.css
/* ... */
.d-bloc .panel .a-btn:hover,
.l-bloc .a-btn:hover,
.l-bloc .navbar a:hover,
.l-bloc .navbar-brand:hover,
.l-bloc a:hover .icon-sm,
.l-bloc a:hover .icon-md,
.l-bloc a:hover .icon-lg,
.l-bloc a:hover .icon-xl,
.l-bloc h1 a:hover,
.l-bloc h2 a:hover,
.l-bloc h3 a:hover,
.l-bloc h4 a:hover,
.l-bloc h5 a:hover,
.l-bloc h6 a:hover,
.l-bloc p a:hover {
  color: rgba(0, 0, 0, 1);
}
.l-bloc .navbar-toggle .icon-bar {
  color: rgba(0, 0, 0, 0.6);
}
.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover,
.l-bloc .btn-wire,
.l-bloc .btn-wire:hover {
  color: rgba(0, 0, 0, 0.7);
  border-color: rgba(0, 0, 0, 0.3);
}
.voffset {
  margin-top: 30px;
}
.voffset-lg {
  margin-top: 80px;
}
.row-no-gutters {
  margin-right: 0;
  margin-left: 0;
}
.row.row-no-gutters > [class^="col-"],
.row.row-no-gutters > [class*=" col-"] {
  padding-right: 0;
  padding-left: 0;
}
#bloc-1-hero h1 {
  font-size: 32px;
}
.navbar {
  margin-bottom: 0;
  z-index: 1;
}
.navbar-brand {
  height: auto;
  padding: 3px 15px;
  font-size: 25px;
  font-weight: normal;
  font-weight: 600;
  line-height: 44px;
}
.navbar-brand img {
  max-height: 200px;
  margin: 0 5px 0 0;
  display: inline;
}
.navbar-brand img[src$="svg"] {
  min-width: 100px;
}
.nav-center .navbar-brand img {
  margin: 0;
}
.navbar .nav {
  display: flex;
  align-items: center;
  padding-top: 2px;
  margin-right: -16px;
  float: right;
  z-index: 1;
}
.nav > li {
  float: left;
  margin-top: 4px;
  font-size: 16px;
}
.navbar-nav .open .dropdown-menu > li > a {
  text-align: inherit;
}
.nav > li a:hover,
.nav > li a:focus {
  background: transparent;
}
.navbar-toggle {
  margin: 10px 10px 0 0;
  border: 0px;
}
.navbar-toggle:hover {
  background: transparent !important;
}
.navbar-toggle .icon-bar {
  background-color: rgba(0, 0, 0, 0.5);
  width: 26px;
}
.nav-invert .navbar .nav {
  float: left;
}
.nav-invert .navbar-header,
.nav-invert .navbar-brand {
  float: right;
  position: relative;
  z-index: 2;
}

/**! MES MODIFS */

h1 {
  font-family: "helvetica";
  color: white;
  font-size: 38px;
  margin: auto;
  margin: 20px 0 10px 0;
}
h2 {
  font-family: "helvetica";
  color: #575757;
  margin: auto;
  font-weight: 600;
  line-height: 2.3rem;
  padding-bottom: 30px;
  text-align: center;
}
.subtitle {
  font-size: clamp(15px, 3vw, 18px);
  font-family: "helvetica";
  font-weight: 400;
}
/** NavBar */
nav a {
  display: inline-block;
  text-decoration: none;
}
nav .menu::after {
  content: "";
  bottom: -10px;
  display: block;
  width: 100%;
  height: 3px;
  background: #b25b24;
}
nav .menu:hover::after {
  background: #a7531f;
}
nav .menu:hover {
  font-weight: bold;
}
/** NavBar - FIN */

/** Formulaire */
.form__center {
  width: 100%;
  display: flex;
  justify-content: center;
}
/** Formulaire - FIN */
.presentation__title {
  width: 66%;
}
.creations {
  width: 56%;
}
.white__title {
  color: white;
}
.testimony {
  width: 58%;
  margin: auto;
  padding-bottom: 15px;
  text-align: center;
}
.testimony__txt {
  font-size: 20px;
  font-weight: 600;
  line-height: 2.3rem;
  margin: 0;
}
.testimony__sign {
  font-size: 20px;
  font-weight: 400;
  line-height: 2.3rem;
}
.creations {
  width: 56%;
}

.img-responsive {
  width: 100%;
  height: 100%;
  object-fit: fill;
}
/**! MES MODIFS - FIN */
/**MEDIA QUERIES*/
@media (min-width: 768px) {
  .site-navigation {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translate(0, -50%);
    -webkit-transform: translateY(-50%);
  }
  .nav > li .dropdown-menu a,
  .nav > li .dropdown-menu a:hover {
    color: #484848;
  }
  .nav-invert .site-navigation {
    left: 0;
    right: 0;
  }
  .nav-center {
    text-align: center;
  }
  .nav-center .navbar-header {
    width: 100%;
  }
  .nav-center .navbar-header,
  .nav-center .navbar-brand,
  .nav-center .nav > li {
    float: none;
    display: inline-block;
  }
  .nav-center .site-navigation {
    position: relative;
    width: 100%;
    right: 0;
    margin-right: 0px;
    margin-top: 20px;
  }
  .nav-center.mini-nav .navbar-toggle {
    float: none;
    margin: 10px auto 0;
  }
}
.nav > li > .dropdown a {
  background: none !important;
  display: block;
  padding: 14px 15px;
}
nav .caret {
  margin: 0 5px;
}
nav a {
  display: inline-block;
  text-decoration: none;
}

.dropdown-menu .dropdown-menu {
  top: -8px;
  left: 100%;
}
.dropdown-menu .dropmenu-flow-right {
  top: 100%;
  left: 0;
  margin-left: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.dropdown-menu .dropdown span {
  border: 4px solid black;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: transparent;
  margin: 6px -5px 0 0 !important;
  float: right;
}
.mg-md {
  margin-top: 10px;
  margin-bottom: 20px;
}
.mg-lg {
  margin-top: 10px;
  margin-bottom: 40px;
}
.btn {
  margin: 0 5px 5px 0;
}
.btn.pull-right {
  margin: 0 0 5px 5px;
}
.btn-d,
.btn-d:hover,
.btn-d:focus {
  color: #fff;
  background: rgba(0, 0, 0, 0.3);
}
button {
  outline: none !important;
}
.btn-rd {
  border-radius: 40px;
}
.btn-clean {
  border: 1px solid rgba(0, 0, 0, 0.08);
  border-bottom-color: rgba(0, 0, 0, 0.1);
  text-shadow: 0 1px 0 rgba(0, 0, 1, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 1, 0.25),
    inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
}
.icon-md {
  font-size: 30px !important;
}
.icon-lg {
  font-size: 60px !important;
}
.sm-shadow {
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
}
.panel-sq,
.panel-sq .panel-heading,
.panel-sq .panel-footer {
  border-radius: 0;
}
.panel-rd {
  border-radius: 30px;
}
.panel-rd .panel-heading {
  border-radius: 29px 29px 0 0;
}
.panel-rd .panel-footer {
  border-radius: 0 0 29px 29px;
}
.form-control {
  border-color: rgba(0, 0, 0, 0.1);
  box-shadow: none;
}
.scrollToTop {
  width: 40px;
  height: 40px;
  position: fixed;
  bottom: 20px;
  right: 20px;
  opacity: 0;
  z-index: 500;
  transition: all 0.3s ease-in-out;
}
.scrollToTop span {
  margin-top: 6px;
}
/* ... */

